css/style.css
/* RESET */
*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    
}

/* COMMONS */

/* TYPO */
body{
    font-family: 'Lato', sans-serif;
}

/* MAIN */
header{
    height: 30px;
    background-color: black;
    text-align: right;
    padding: 5px;
    vertical-align: middle;
}

body {
    background-color: #000;
    height: 100vh;
}

main{
    height: calc(100vh - 130px);
    background-color: BLACK;
    max-width: 90%;
    margin: auto;
    overflow-y: auto;
    margin-top: 10PX;
    

}

footer{
    height: 90px;
    background-color: #222222;
    
}

.speaker-view{
    color: white;
    display: inline-block;
    margin-right: 10px;
    background-color: #4a4a4a;
    padding: 5px;
    border-radius: 5px;
    font-size: 12px;
    
}

span i{
    color: white;
    background-color: #4a4a4a;
    padding: 6px;
    border-radius: 5px;
    font-size: 12px;
    
}

.griglia-immagini{
    display: flex;
    flex-wrap: wrap;
    height: calc(100vh -130px);
}

.img-card{
    max-width: calc(100%/7 - 10px);
    margin: 5px;
    position: relative;
}

.img-card img{
    width: 100%;
    display: block;
}

.nome-card{
    position:absolute;
    left: 0;
    bottom:0;
    color: white;
    background-color: rgba(0,0,0,0.4);
    padding: 5px;
    font-size: 14px;
}

.dashboard{
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: white;
    font-size: 12px;
    text-align: center;
    padding: 10px;
    margin: 5px;

}

li{
    padding: 5px;

}

ul{
    list-style-type: none;
    padding: 5px;
    vertical-align: middle;
}

.left-dashboard{
    display: flex;
}

.central-dashboard{
    display: flex;
}

.right-dashboard{
    display: flex;
}

.share-screen i{
    color: #4bc800;
}

.dashboard-text{
    padding-top: 5px;
}

.box-right-dashboard{
    width: 100px;
    
    margin: 0;
    padding: 0;
    background-color: #4a4a4a;
    
}

.box-right-dashboard li{
    color: orangered;

}

li i{
    vertical-align: middle;
}

.chevron i{
    margin-top: 15px;
}

